fix mainTitle line spacing

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -128,7 +128,7 @@ body {
   color: #3b3d40;
   font-family: "raleway extrabold";
   font-size: 52px !important;
-  line-height: 34pt;
+  line-height: 40pt;
 }
 
 .columnCentered {
